--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@ body {
 	padding: 30px;
 	border: 1px solid #f5f5f5;
 	border-radius: 8px;
+
+
+}
+
+#twiceGif {
+	width: 10vh;
 }
 .twiceBar {
 	width: 100% !important;
